--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ before_install:
 - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY_TEST --jwtkeyfile assets/server.key
   --username $USERNAME_TEST -a TestOrg
 script:
+- sfdx force:org:create -v HubOrg -s -f config/project-scratch-def.json -a ciorg --wait
+  3 --loglevel DEBUG
+- sfdx force:org:display -u ciorg
+- sfdx force:source:push -u ciorg
+- sfdx force:apex:test:run -u ciorg --wait 10
+- sfdx force:org:delete -u ciorg -p
 - sfdx force:source:convert --rootdir force-app --outputdir tmp_convert
 - zip -r build.zip tmp_convert
 - sfdx force:mdapi:deploy --zipfile build.zip --targetusername TestOrg --testlevel
